--- a/app/src/main/res/layout/all_worker_list.xml
+++ b/app/src/main/res/layout/all_worker_list.xml
@@ -47,7 +47,7 @@
         android:backgroundTintMode="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/defaultprofile" />
+        tools:srcCompat="@drawable/profile" />
 
     <TextView
         android:id="@+id/tv_id"
