--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -45,7 +45,7 @@
         app:layout_constraintGuide_percent="0.2995896" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/join_view"
         android:layout_width="wrap_content"
         android:layout_height="599dp"
         android:background="@drawable/box_round"
@@ -58,7 +58,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/join_title"
         android:layout_width="136dp"
         android:layout_height="40dp"
         android:layout_marginTop="28dp"
@@ -71,71 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logo2" />
 
     <EditText
-        android:id="@+id/input_pw2"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="비밀번호를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline5"
-        app:layout_constraintStart_toStartOf="@+id/guideline11"
-        app:layout_constraintTop_toBottomOf="@+id/btn_back2" />
-
-    <EditText
-        android:id="@+id/input_pw3"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="이름을 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline5"
-        app:layout_constraintStart_toStartOf="@+id/guideline11"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw2" />
-
-    <EditText
-        android:id="@+id/input_pw4"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="전화번호를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline5"
-        app:layout_constraintStart_toStartOf="@+id/guideline11"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw3" />
-
-    <EditText
-        android:id="@+id/input_pw5"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="소속을 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline5"
-        app:layout_constraintStart_toStartOf="@+id/guideline11"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw4" />
-
-    <EditText
-        android:id="@+id/input_id2"
+        android:id="@+id/join_id"
         android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_marginTop="4dp"
@@ -152,15 +88,78 @@
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toTopOf="@+id/guideline13" />
 
+    <EditText
+        android:id="@+id/join_pw"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button_round"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:fontFamily="@font/sleigothic"
+        android:hint="비밀번호를 입력하세요"
+        android:inputType="textPersonName|textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@+id/guideline11"
+        app:layout_constraintTop_toBottomOf="@+id/btn_idcheck2" />
+
+    <EditText
+        android:id="@+id/edit_mid"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_round"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:fontFamily="@font/sleigothic"
+        android:hint="이름을 입력하세요"
+        android:inputType="textPersonName|textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@+id/guideline11"
+        app:layout_constraintTop_toBottomOf="@+id/join_pw" />
+
+    <EditText
+        android:id="@+id/edit_wid"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button_round"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:fontFamily="@font/sleigothic"
+        android:hint="전화번호를 입력하세요"
+        android:inputType="textPersonName|textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@+id/guideline11"
+        app:layout_constraintTop_toBottomOf="@+id/edit_mid" />
+
+    <EditText
+        android:id="@+id/join_dept"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_round"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:fontFamily="@font/sleigothic"
+        android:hint="소속을 입력하세요"
+        android:inputType="textPersonName|textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@+id/guideline11"
+        app:layout_constraintTop_toBottomOf="@+id/edit_wid" />
+
     <Button
-        android:id="@+id/btn_back"
+        android:id="@+id/btn_back2"
         android:layout_width="99dp"
         android:layout_height="39dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_round"
         android:backgroundTint="@color/seco"
         android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
         android:text="back"
         android:textColor="#ffb606"
         android:textSize="16sp"
@@ -170,7 +169,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_join2" />
 
     <Button
-        android:id="@+id/btn_back2"
+        android:id="@+id/btn_idcheck2"
         android:layout_width="139dp"
         android:layout_height="38dp"
         android:layout_marginTop="12dp"
@@ -184,12 +183,13 @@
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
-        app:layout_constraintTop_toBottomOf="@+id/input_id2" />
+        app:layout_constraintTop_toBottomOf="@+id/join_id" />
 
     <Button
         android:id="@+id/btn_join2"
         android:layout_width="124dp"
         android:layout_height="42dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_round"
         android:fontFamily="@font/sleigothic"
         android:text="join us"
@@ -199,7 +199,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
-        tools:layout_editor_absoluteY="607dp" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_admin" />
 
     <ImageView
         android:id="@+id/logo2"
@@ -212,13 +212,13 @@
         app:srcCompat="@drawable/logo_black_removebg" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkBox_admin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="관리자여부"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw5" />
+        app:layout_constraintTop_toBottomOf="@+id/join_dept" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
