--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -12,7 +12,7 @@
 
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/join_view"
         android:layout_width="wrap_content"
         android:layout_height="609dp"
         android:background="@drawable/box_round"
@@ -24,25 +24,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
-        android:id="@+id/input_pw3"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="안전모ID를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/join_title"
         android:layout_width="281dp"
         android:layout_height="38dp"
         android:layout_marginTop="4dp"
@@ -56,7 +39,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/m_title1"
         android:layout_width="281dp"
         android:layout_height="38dp"
         android:layout_marginTop="36dp"
@@ -68,39 +51,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="281dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/seco"
-        android:fontFamily="@font/sleigothic"
-        android:gravity="center"
-        android:text="기기 정보 수정"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
-
-    <EditText
-        android:id="@+id/w_id"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="근로자ID를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/m_id" />
+        app:layout_constraintTop_toBottomOf="@+id/join_title" />
 
     <EditText
         android:id="@+id/m_id"
@@ -118,7 +69,24 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/join_title" />
+
+    <EditText
+        android:id="@+id/w_id"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_round"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:fontFamily="@font/sleigothic"
+        android:hint="근로자ID를 입력하세요"
+        android:inputType="textPersonName|textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/m_id" />
 
     <Button
         android:id="@+id/btn_register"
@@ -138,23 +106,54 @@
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/w_id" />
 
-    <Button
-        android:id="@+id/btn_back_medit"
-        android:layout_width="133dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/button_round"
+    <TextView
+        android:id="@+id/m_title2"
+        android:layout_width="281dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/seco"
         android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
-        android:text="back"
-        android:textColor="#ffb606"
-        android:textSize="16sp"
-        app:backgroundTint="@null"
+        android:gravity="center"
+        android:text="기기 정보 수정"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/btn_modify" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
+
+    <EditText
+        android:id="@+id/edit_mid"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_round"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:fontFamily="@font/sleigothic"
+        android:hint="안전모ID를 입력하세요"
+        android:inputType="textPersonName|textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/m_title2" />
+
+    <EditText
+        android:id="@+id/edit_wid"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_round"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:fontFamily="@font/sleigothic"
+        android:hint="근로자ID를 입력하세요"
+        android:inputType="textPersonName|textPassword"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/edit_mid" />
 
     <Button
         android:id="@+id/btn_modify"
@@ -172,25 +171,26 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw4" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_wid" />
 
-    <EditText
-        android:id="@+id/input_pw4"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
+
+    <Button
+        android:id="@+id/btn_back_medit"
+        android:layout_width="133dp"
+        android:layout_height="43dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
+        android:backgroundTint="@color/seco"
         android:fontFamily="@font/sleigothic"
-        android:hint="근로자ID를 입력하세요"
-        android:inputType="textPersonName|textPassword"
-        android:paddingLeft="10dp"
+        android:onClick="onclick"
+        android:text="back"
+        android:textColor="#ffb606"
+        android:textSize="16sp"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw3" />
-
+        app:layout_constraintTop_toBottomOf="@+id/btn_modify" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
