--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/input_pw3"
+        android:id="@+id/join_name"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
@@ -172,10 +172,10 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw4" />
+        app:layout_constraintTop_toBottomOf="@+id/join_tel" />
 
     <EditText
-        android:id="@+id/input_pw4"
+        android:id="@+id/join_tel"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
@@ -189,7 +189,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw3" />
+        app:layout_constraintTop_toBottomOf="@+id/join_name" />
 
 
     <androidx.constraintlayout.widget.Guideline
