--- a/app/src/main/res/layout/fragment_machine.xml
+++ b/app/src/main/res/layout/fragment_machine.xml
@@ -11,197 +11,12 @@
     tools:context=".MachineFragment">
 
 
-    <View
-        android:id="@+id/join_view"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:background="@drawable/box_round"
-        android:backgroundTint="@color/light_white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/join_title"
-        android:layout_width="281dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="64dp"
-        android:backgroundTint="@color/seco"
-        android:fontFamily="@font/sleigothic"
-        android:gravity="center"
-        android:text="Machine resistration"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/m_title1"
-        android:layout_width="281dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="36dp"
-        android:backgroundTint="@color/seco"
-        android:fontFamily="@font/sleigothic"
-        android:gravity="center"
-        android:text="기기 등록"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/join_title" />
-
-    <EditText
-        android:id="@+id/m_id"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="84dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:clickable="false"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="안전모ID를 입력하세요"
-        android:inputType="textPersonName"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/join_title" />
-
-    <EditText
-        android:id="@+id/w_id"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="근로자ID를 입력하세요"
-        android:inputType="textPersonName"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/m_id" />
-
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="196dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/seco"
-        android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
-        android:text="기기 등록"
-        android:textColor="#ffb606"
-        android:textSize="16sp"
-        app:backgroundTint="@null"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/w_id" />
-
-    <TextView
-        android:id="@+id/m_title2"
-        android:layout_width="281dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/seco"
-        android:fontFamily="@font/sleigothic"
-        android:gravity="center"
-        android:text="기기 정보 수정"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
-
-    <EditText
-        android:id="@+id/edit_mid"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="안전모ID를 입력하세요"
-        android:inputType="textPersonName"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/m_title2" />
-
-    <EditText
-        android:id="@+id/edit_wid"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/white"
-        android:ems="10"
-        android:fontFamily="@font/sleigothic"
-        android:hint="근로자ID를 입력하세요"
-        android:inputType="textPersonName"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/edit_mid" />
-
-    <Button
-        android:id="@+id/btn_modify"
-        android:layout_width="197dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/seco"
-        android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
-        android:text="기기 수정"
-        android:textColor="#ffb606"
-        android:textSize="16sp"
-        app:backgroundTint="@null"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/edit_wid" />
-
-
-    <Button
-        android:id="@+id/btn_back_medit"
-        android:layout_width="133dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="@color/seco"
-        android:fontFamily="@font/sleigothic"
-        android:onClick="onclick"
-        android:text="back"
-        android:textColor="#ffb606"
-        android:textSize="16sp"
-        app:backgroundTint="@null"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/btn_modify" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="122dp" />
+        app:layout_constraintGuide_end="609dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -223,6 +38,165 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="354dp" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:backgroundTint="@color/prim"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/edit_mid"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/white"
+                android:ems="10"
+                android:fontFamily="@font/sleigothic"
+                android:hint="안전모ID를 입력하세요"
+                android:inputType="textPersonName"
+                android:paddingLeft="10dp"
+                tools:layout_editor_absoluteX="58dp"
+                tools:layout_editor_absoluteY="442dp" />
+
+            <Button
+                android:id="@+id/btn_modify"
+                android:layout_width="197dp"
+                android:layout_height="45dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:onClick="onclick"
+                android:text="기기 수정"
+                android:textColor="#ffb606"
+                android:textSize="16sp"
+                app:backgroundTint="@null"
+                tools:layout_editor_absoluteX="107dp"
+                tools:layout_editor_absoluteY="570dp" />
+
+            <TextView
+                android:id="@+id/m_title1"
+                android:layout_width="281dp"
+                android:layout_height="38dp"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="기기 등록"
+                android:textSize="24sp"
+                tools:layout_editor_absoluteX="65dp"
+                tools:layout_editor_absoluteY="148dp" />
+
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="196dp"
+                android:layout_height="47dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:onClick="onclick"
+                android:text="기기 등록"
+                android:textColor="#ffb606"
+                android:textSize="16sp"
+                app:backgroundTint="@null"
+                tools:layout_editor_absoluteX="107dp"
+                tools:layout_editor_absoluteY="320dp" />
+
+            <Button
+                android:id="@+id/btn_back_medit"
+                android:layout_width="133dp"
+                android:layout_height="43dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:onClick="onclick"
+                android:text="back"
+                android:textColor="#ffb606"
+                android:textSize="16sp"
+                app:backgroundTint="@null"
+                tools:layout_editor_absoluteX="139dp"
+                tools:layout_editor_absoluteY="630dp" />
+
+            <TextView
+                android:id="@+id/m_title2"
+                android:layout_width="281dp"
+                android:layout_height="38dp"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="기기 정보 수정"
+                android:textSize="24sp"
+                tools:layout_editor_absoluteX="65dp"
+                tools:layout_editor_absoluteY="391dp" />
+
+            <EditText
+                android:id="@+id/m_id"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/white"
+                android:clickable="false"
+                android:ems="10"
+                android:fontFamily="@font/sleigothic"
+                android:hint="안전모ID를 입력하세요"
+                android:inputType="textPersonName"
+                android:paddingLeft="10dp"
+                tools:layout_editor_absoluteX="58dp"
+                tools:layout_editor_absoluteY="196dp" />
+
+            <EditText
+                android:id="@+id/edit_wid"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/white"
+                android:ems="10"
+                android:fontFamily="@font/sleigothic"
+                android:hint="근로자ID를 입력하세요"
+                android:inputType="textPersonName"
+                android:paddingLeft="10dp"
+                tools:layout_editor_absoluteX="58dp"
+                tools:layout_editor_absoluteY="507dp" />
+
+            <EditText
+                android:id="@+id/w_id"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button_round"
+                android:backgroundTint="@color/white"
+                android:ems="10"
+                android:fontFamily="@font/sleigothic"
+                android:hint="근로자ID를 입력하세요"
+                android:inputType="textPersonName"
+                android:paddingLeft="10dp"
+                tools:layout_editor_absoluteX="58dp"
+                tools:layout_editor_absoluteY="258dp" />
+
+            <TextView
+                android:id="@+id/join_title"
+                android:layout_width="258dp"
+                android:layout_height="55dp"
+                android:layout_marginTop="64dp"
+                android:backgroundTint="@color/seco"
+                android:fontFamily="@font/sleigothic"
+                android:gravity="center"
+                android:text="Machine resistration"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
