--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="prim">#ffb606</color>
     <color name="seco">#1A1A1A</color>
     <color name="light_white">#F1F1FA</color>
+    <color name="orange">#f7971e</color>
 </resources>
